tests/success/comptime/global_variable.bz
consteval i = 0;

function test()
{
	(consteval if (false) {
		i
	} else {
		i
	});
}
