tests/error/comptime/invalid_result_value4.bz
consteval p = {
	let i = 0;
	&i
};
